--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "slack-clone",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "nuqs": {
+      "next": "$next"
+    }
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
